--- a/tapestry_room.html
+++ b/tapestry_room.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width",
+	<meta name="viewport" content="width=device-width"
 		  initial-scale="1.0">
 	<title>The Gallery Tour</title>
 	<link rel="stylesheet" type="text/css" href="styles/tapestry_style.css">
@@ -10,10 +10,26 @@
 <body>
 	<div class="outer-wrapper">
 		<div class="wrapper">
-			<div class="slide one"></div>
-			<div class="slide two"></div>
-			<div class="slide three"></div>
-			<div class="slide four"></div>
+			<div class="slide one">
+				<div class="one_frame_container">
+
+				</div>
+			</div>
+			<div class="slide two">
+				<div class="two_frame_container">
+
+				</div>
+			</div>
+			<div class="slide three">
+				<div class="three_frame_container">
+
+				</div>
+			</div>
+			<div class="slide four">
+				<div class="four_frame_container">
+
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
