--- a/tapestry_room.html
+++ b/tapestry_room.html
@@ -30,6 +30,11 @@
 
 				</div>
 			</div>
+			<div class="slide five">
+				<div class="next_room">
+					<a href="cave.html"><button class="button">next room</button></a>
+				</div>
+				</div>
 		</div>
 	</div>
 </body>
