worked on cave room and subbed home page

--- a/cave.html
+++ b/cave.html
@@ -11,13 +11,79 @@
 </head>
 <body>
     <div id="overlay">
-        <div class="item one"></div>
-        <div class="item two"></div>
-        <div class="item three"></div>
-        <div class="item four"></div>
-        <div class="item five"></div>
-        <div class="item six"></div>
+        <div class="item one">
+            <button id="buttonOne"></button>
+            <div class="image One"></div>
+        </div>
+        <div class="item two">
+            <button id="buttonTwo"></button>
+            <div class="image Two"></div>
+        </div>
+        <div class="item three">
+            <button id="buttonThree"></button>
+            <div class="image Three"></div>
+        </div>
+        <div class="item four">
+            <button id="buttonFour"></button>
+            <div class="image Four"></div>
+        </div>
+        <div class="item five">
+            <button id="buttonFive"></button>
+            <div class="image Five"></div>
+        </div>
+
     </div>
+
+    <div id="OneModal" class="modal">
+        <div class="modal-content">
+            <div class="pic" id="pic1"></div>
+            <div class="description">
+                <p>Some text in the Modal..</p>
+            </div>
+            <span class="close" id="closeOne">&times;</span>
+        </div>
+    </div>
+
+    <div id="TwoModal" class="modal">
+        <div class="modal-content">
+            <div class="pic" id="pic2"></div>
+            <div class="description">
+                <p>Some text in the Modal..</p>
+            </div>
+            <span class="close" id="closeTwo">&times;</span>
+        </div>
+    </div>
+
+    <div id="ThreeModal" class="modal">
+        <div class="modal-content">
+            <div class="pic" id="pic3"></div>
+            <div class="description">
+                <p>Some text in the Modal..</p>
+            </div>
+            <span class="close" id="closeThree">&times;</span>
+        </div>
+    </div>
+
+    <div id="FourModal" class="modal">
+        <div class="modal-content">
+            <div class="pic" id="pic4"></div>
+            <div class="description">
+                <p>Some text in the Modal..</p>
+            </div>
+            <span class="close" id="closeFour">&times;</span>
+        </div>
+    </div>
+
+    <div id="FiveModal" class="modal">
+        <div class="modal-content">
+            <div class="pic" id="pic5"></div>
+            <div class="description">
+                <p>Some text in the Modal..</p>
+            </div>
+            <span class="close" id="closeFive">&times;</span>
+        </div>
+    </div>
+
     <script type="text/javascript" src="js/cave.js"></script>
 </body>
 </html>
