--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<div id="content">
 			<div class="nav">
 				<div class="container">
-					<a href="explore.html"><button class="button">explore</button></a>
+					<a href="tapestry_room.html"><button class="button">explore</button></a>
 				</div>
 				<div class="container">
 					<a href="map.html"><button class="button">map </button></a>
 				</div>
 				<div class="container">
-					<a href="tapestry_room.html"><button class="button">take<br>the tour</button></a>
+					<a href="take_the_tour.html"><button class="button">take<br>the tour</button></a>
 				</div>
 				<div class="container">
 					<a href="about.html"><button class="button">about</button></a>
