*Cave room: clicking on modals causes torch to turn back into mouse *Reflection room: assets attached to pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" type="text/css" href="styles/index_style.css">
 </head>
 <body>
-	<div id="content">
+	<div id="background">
+		<div id="content">
 			<div class="nav">
 				<div class="container">
 					<a href="tapestry_room.html"><button class="button">explore</button></a>
@@ -24,6 +25,9 @@
 				</div>
 
 			</div>
+		</div>
 	</div>
+
 </body>
+<img src="styles/graphics/index_plain_background.png" />
 </html>
