Add sized 3-piece backgrounds

--- a/gallery-hang.html
+++ b/gallery-hang.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" type="text/css" href="styles/gallery_hang_style.css">
 </head>
 <body id="hang-room-body">
-    <h1>Gallery Hang Room</h1>
+    <div id="hang-room-sky">
+
+    </div>
+    <div id="hang-room-staircase">
+
+    </div>
+    <div id="hang-room-floor">
+
+    </div>
 </body>
 </html>
