--- a/hang-room/index.html
+++ b/hang-room/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <title>Gallery Hang Room</title>
-    <link rel="stylesheet" type="text/css" href="styles/gallery_hang_style.css">
+    <link rel="stylesheet" type="text/css" href="gallery_hang_style.css">
 </head>
 <body id="hang-room-body">
     <div id="hang-room-sky">
