Scroll to bottom on page load and hide jerkiness with a loading div

--- a/hang-room/index.html
+++ b/hang-room/index.html
@@ -10,11 +10,17 @@
     <div id="hang-room-sky">
 
     </div>
+
     <div id="hang-room-staircase">
 
     </div>
+
     <div id="hang-room-floor">
 
     </div>
+
+    <div id="loading-panel">Loading...</div>
+
+    <script type="text/javascript" src="hang-room.js"></script>
 </body>
 </html>
