--- a/hang-room/index.html
+++ b/hang-room/index.html
@@ -16,6 +16,9 @@
     </div>
 
     <div id="hang-room-floor">
+        <div id="look-up">
+            <button class="look-up-button" onclick="scrollToSky(event)">Look up</button>
+        </div>
 
     </div>
 
