Click sky background to switch between images

--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="gallery_hang_style.css">
 </head>
 <body id="hang-room-body">
-    <div id="hang-room-sky">
+    <div id="hang-room-sky" class="background-wash" onclick="toggleSky(event)">
 
     </div>
 
