Add placeholder "look down" button

--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -8,6 +8,9 @@
 </head>
 <body id="hang-room-body">
     <div id="hang-room-sky" class="background-wash" onclick="toggleSky(event)">
+        <div id="look-down">
+            <button class="look-down-button" onclick="scrollToFloor(event)">Look down</button>
+        </div>
 
     </div>
 
