Add some example cat photos + frames

--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -12,6 +12,32 @@
             <button class="look-down-button" onclick="scrollToFloor(event)">Look down</button>
         </div>
 
+        <div class="container gallery-container">
+
+            <div class="artwork-container"
+                 style="width: 351px; height: 413px;
+                        left: 90px; top: 30px;"
+            >
+                <img class="artwork" style="margin: 75px 60px;
+                        width: 250px; height: 300px;"
+                     src="http://placekitten.com/g/250/300">
+                <img class="artwork-frame"
+                     src="../styles/graphics/Frames/Gold_2_Dark.png">
+            </div>
+
+            <div class="artwork-container"
+                 style="width: 319px; height: 406px;
+                        left: 500px; top: 50px;"
+            >
+                <img class="artwork" style="margin: 60px 70px;
+                        width: 185px; height: 320px;"
+                     src="http://placekitten.com/g/185/320">
+                <img class="artwork-frame"
+                     src="../styles/graphics/Frames/Gold_4_Gold_Line.png">
+            </div>
+
+
+        </div>
     </div>
 
     <div id="hang-room-staircase">
