--- a/reflection1.html
+++ b/reflection1.html
@@ -10,16 +10,16 @@
 <body>
     <div id="content">
         <div class="container one">
-            <div id="frame1"></div>
+            <div class="frame" id="frame1"></div>
         </div>
         <div class="container two">
-            <div id="frame2"></div>
+            <div class="frame" id="frame2"></div>
         </div>
         <div class="container three">
-            <div id="frame3"></div>
+            <div class="frame" id="frame3"></div>
         </div>
         <div class="container four">
-            <div id="frame4"></div>
+            <div class="frame" id="frame4"></div>
         </div>
     </div>
 </body>
