Add instructions for how to add art to the gallery hang

--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -15,9 +15,8 @@
         <div class="container gallery-container">
 
             <div class="artwork-container"
-                 style="width: 351px; height: 413px;
-                        left: 90px; top: 30px;"
-            >
+                 style="left: 90px; top: 30px;
+                        width: 351px; height: 413px;">
                 <img class="artwork" style="margin: 75px 60px;
                         width: 250px; height: 300px;"
                      src="http://placekitten.com/g/250/300">
@@ -26,9 +25,8 @@
             </div>
 
             <div class="artwork-container"
-                 style="width: 319px; height: 406px;
-                        left: 500px; top: 50px;"
-            >
+                 style="left: 500px; top: 50px;
+                        width: 319px; height: 406px;">
                 <img class="artwork" style="margin: 60px 70px;
                         width: 185px; height: 320px;"
                      src="http://placekitten.com/g/185/320">
