Fix page title on all pages; couple of HTML syntax issues

--- a/reflection4.html
+++ b/reflection4.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<!--<html>-->
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width",
-          initial-scale="1.0">
-    <title>Welcome to The Gallery</title>
+    <meta name="viewport" content="width=device-width" initial-scale="1.0">
+    <title>Room of Reflection | Imaginary Gallery</title>
     <link rel="stylesheet" type="text/css" href="styles/reflection_style4.css">
 </head>
 <body>
