--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<!--<html>-->
+<html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width",
-	initial-scale="1.0">
-	<title>Welcome to The Gallery</title>
+	<meta name="viewport" content="width=device-width" initial-scale="1.0">
+	<title>Welcome to the Imaginary Gallery</title>
 	<link rel="stylesheet" type="text/css" href="styles/index_style.css">
 </head>
 <body>
