--- a/take_the_tour.html
+++ b/take_the_tour.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Something</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width" initial-scale="1.0">
+	<title>Take The Tour | Imaginary Gallery</title>
 </head>
 <body>
-<h1>
-	Let's explore!!!
-</h1>
+	<h1>
+		Let's explore!!!
+	</h1>
 </body>
 </html>
