Initial menu template

--- a/tapestry_room.html
+++ b/tapestry_room.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width"
 		  initial-scale="1.0">
 	<title>The Gallery Tour</title>
+	<link rel="stylesheet" type="text/css" href="shared/menu/menu.css">
 	<link rel="stylesheet" type="text/css" href="styles/tapestry_style.css">
 </head>
 <body>
@@ -37,5 +38,13 @@
 				</div>
 		</div>
 	</div>
+
+	<div id="menu" class="closed">
+		<button onclick="toggleMenu(event);">Menu</button>
+		<ul class="menu-list">
+			<li><a href="/cave.html">Explore</a></li>
+		</ul>
+	</div>
+	<script type="text/javascript" src="shared/menu/menu.js"></script>
 </body>
 </html>
