--- a/tapestry_room.html
+++ b/tapestry_room.html
@@ -9,6 +9,17 @@
 	<link rel="stylesheet" type="text/css" href="styles/tapestry_style.css">
 </head>
 <body>
+	<div id="menu" class="closed">
+		<button id="open-menu-button" onclick="toggleMenu(event);">Menu</button>
+		<ul class="menu-list">
+			<li><a href="/cave.html">Explore</a></li>
+			<li><a href="/map.html">Map</a></li>
+			<li><a href="#">What's on</a></li>
+			<li><a href="/about.html">About</a></li>
+		</ul>
+	</div>
+	<script type="text/javascript" src="shared/menu/menu.js"></script>
+
 	<div class="outer-wrapper">
 		<div class="wrapper">
 			<div class="slide one">
@@ -38,13 +49,5 @@
 				</div>
 		</div>
 	</div>
-
-	<div id="menu" class="closed">
-		<button onclick="toggleMenu(event);">Menu</button>
-		<ul class="menu-list">
-			<li><a href="/cave.html">Explore</a></li>
-		</ul>
-	</div>
-	<script type="text/javascript" src="shared/menu/menu.js"></script>
 </body>
 </html>
