Start to move menu into right configuration

--- a/tapestry_room.html
+++ b/tapestry_room.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div id="menu" class="closed">
-		<button id="open-menu-button" onclick="toggleMenu(event);">Menu</button>
+		<button id="open-menu-button" onclick="toggleMenu(event);">Open Menu</button>
 		<ul class="menu-list">
 			<li><a href="/cave.html">Explore</a></li>
 			<li><a href="/map.html">Map</a></li>
