Add menu to all existing pages

--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" type="text/css" href="gallery_hang_style.css">
 </head>
 <body id="hang-room-body">
+    <link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
+	<div id="menu" class="closed">
+		<button id="open-menu-button" onclick="toggleMenu(event);">
+			<img id="open-menu-button-image" src="/shared/menu/Logo.gif" height=90>
+			<img id="close-menu-button-image" src="/shared/menu/Logo-to-Cross-onetime.gif" height=90 hidden>
+			<span id="open-menu-button-text" class="visually-hidden">Open Menu</span>
+		</button>
+		<div class="menu-content">
+			<ul class="menu-list">
+				<li><a href="/cave.html">Explore</a></li>
+				<li><a href="/map.html">Map</a></li>
+				<li><a href="#">What's on</a></li>
+				<li><a href="/about.html">About</a></li>
+			</ul>	
+		</div>
+	</div>
+	<script type="text/javascript" src="/shared/menu/menu.js"></script>
+
     <div id="hang-room-sky" class="background-wash" onclick="toggleSky(event)">
         <div id="look-down">
             <button class="look-down-button" onclick="scrollToFloor(event)">Look down</button>
