*re-organise folders *fix frames on reflection room, add arrows *change tapestry room assets

--- a/reflections/reflection3.html
+++ b/reflections/reflection3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <title>Room of Reflection | Imaginary Gallery</title>
-    <link rel="stylesheet" type="text/css" href="styles/reflection_style4.css">
+    <link rel="stylesheet" type="text/css" href="reflection_style3.css">
 </head>
 <body>
     <link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
@@ -16,7 +16,7 @@
 		</button>
 		<div class="menu-content">
 			<ul class="menu-list">
-				<li><a href="/cave.html">Explore</a></li>
+				<li><a href="/cave/cave.html">Explore</a></li>
 				<li><a href="/map.html">Map</a></li>
 				<li><a href="#">What's on</a></li>
 				<li><a href="/about.html">About</a></li>
@@ -28,6 +28,7 @@
     <div id="content">
         <div class="container one">
             <div class="frame" id="frame1"></div>
+            <a href="reflection2.html" class="arrow" id="previous"></a>
         </div>
         <div class="container two">
             <div class="frame" id="frame2"></div>
@@ -37,6 +38,7 @@
         </div>
         <div class="container four">
             <div class="frame" id="frame4"></div>
+            <a href="reflection4.html" class="arrow" id="next"></a>
         </div>
     </div>
 </body>
