--- a/tapestry/tapestry_room.html
+++ b/tapestry/tapestry_room.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width" initial-scale="1.0">
 	<title>Tapestry Room | Imaginary Gallery</title>
-	<link rel="stylesheet" type="text/css" href="styles/tapestry_style.css">
+	<link rel="stylesheet" type="text/css" href="tapestry_style.css">
 </head>
 <body>
 	<link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
@@ -16,7 +16,7 @@
 		</button>
 		<div class="menu-content">
 			<ul class="menu-list">
-				<li><a href="/cave.html">Explore</a></li>
+				<li><a href="/cave/cave.html">Explore</a></li>
 				<li><a href="/map.html">Map</a></li>
 				<li><a href="#">What's on</a></li>
 				<li><a href="/about.html">About</a></li>
@@ -27,29 +27,26 @@
 
 	<div class="outer-wrapper">
 		<div class="wrapper">
-			<div class="slide one">
-				<div class="one_frame_container">
-
-				</div>
+			<div class="slide">
+				<div id="ab1_entrance"></div>
 			</div>
-			<div class="slide two">
-				<div class="two_frame_container">
-
-				</div>
+			<div class="slide">
+				<div id="ab1_medium_frame"></div>
 			</div>
-			<div class="slide three">
-				<div class="three_frame_container">
-
-				</div>
+			<div class="slide">
+				<div id="ab2_medium_rectangle_vertical_frame"></div>
+				<div id="ab2_split_frame_1"></div>
+				<div id="ab2_medium_frame"></div>
+				<div id="ab2_split_frame_2"></div>
 			</div>
-			<div class="slide four">
+			<div class="slide">
 				<div class="four_frame_container">
 
 				</div>
 			</div>
-			<div class="slide five">
+			<div class="slide">
 				<div class="next_room">
-					<a href="cave.html"><button class="button">next room</button></a>
+					<a href="../cave/cave.html"><button class="button">next room</button></a>
 				</div>
 			</div>
 		</div>
