--- a/cave/cave.html
+++ b/cave/cave.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <title>Cave | Imaginary Gallery</title>
-    <link rel="stylesheet" type="text/css" href="styles/cave_style.css">
+    <link rel="stylesheet" type="text/css" href="cave_style.css">
 </head>
 <body>
     <link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
@@ -16,7 +16,7 @@
 		</button>
 		<div class="menu-content">
 			<ul class="menu-list">
-				<li><a href="/cave.html">Explore</a></li>
+				<li><a href="../cave/cave.html">Explore</a></li>
 				<li><a href="/map.html">Map</a></li>
 				<li><a href="#">What's on</a></li>
 				<li><a href="/about.html">About</a></li>
@@ -99,6 +99,6 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="js/cave.js"></script>
+    <script type="text/javascript" src="cave.js"></script>
 </body>
 </html>
