--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -16,7 +16,7 @@
 		</button>
 		<div class="menu-content">
 			<ul class="menu-list">
-				<li><a href="/cave.html">Explore</a></li>
+				<li><a href="/cave/cave.html">Explore</a></li>
 				<li><a href="/map.html">Map</a></li>
 				<li><a href="#">What's on</a></li>
 				<li><a href="/about.html">About</a></li>
