--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div id="content">
 			<div class="nav">
 				<div class="container">
-					<a href="tapestry_room.html"><button class="button">explore</button></a>
+					<a href="tapestry/tapestry_room.html"><button class="button">explore</button></a>
 				</div>
 				<div class="container">
 					<a href="map.html"><button class="button">map </button></a>
