--- a/reflections/reflection4.html
+++ b/reflections/reflection4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <title>Room of Reflection | Imaginary Gallery</title>
-    <link rel="stylesheet" type="text/css" href="styles/reflection_style1.css">
+    <link rel="stylesheet" type="text/css" href="reflection_style4.css">
 </head>
 <body>
     <link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
@@ -16,7 +16,7 @@
 		</button>
 		<div class="menu-content">
 			<ul class="menu-list">
-				<li><a href="/cave.html">Explore</a></li>
+				<li><a href="/cave/cave.html">Explore</a></li>
 				<li><a href="/map.html">Map</a></li>
 				<li><a href="#">What's on</a></li>
 				<li><a href="/about.html">About</a></li>
@@ -34,9 +34,11 @@
         </div>
         <div class="container three">
             <div class="frame" id="frame3"></div>
+            <a href="reflection3.html" class="arrow" id="previous"></a>
         </div>
         <div class="container four">
             <div class="frame" id="frame4"></div>
+            <a href="/gallery-hang/index.html" id="next">next room</a>
         </div>
     </div>
 </body>
