*build out tapestry room *fix reflection room spacing

--- a/tapestry/tapestry_room.html
+++ b/tapestry/tapestry_room.html
@@ -25,31 +25,41 @@
 	</div>
 	<script type="text/javascript" src="/shared/menu/menu.js"></script>
 
-	<div class="outer-wrapper">
-		<div class="wrapper">
+	<div id="outer-wrapper">
+		<div id="wrapper">
 			<div class="slide">
 				<div id="ab1_entrance"></div>
-			</div>
-			<div class="slide">
 				<div id="ab1_medium_frame"></div>
 			</div>
 			<div class="slide">
-				<div id="ab2_medium_rectangle_vertical_frame"></div>
+				<div id="ab2_medium_rectangle_vertical_frame_1"></div>
 				<div id="ab2_split_frame_1"></div>
 				<div id="ab2_medium_frame"></div>
 				<div id="ab2_split_frame_2"></div>
+				<div id="ab2_medium_rectangle_vertical_frame_2"></div>
 			</div>
 			<div class="slide">
-				<div class="four_frame_container">
-
-				</div>
+				<div id="ab3_birds"></div>
+				<div id="ab3_large_frame"></div>
 			</div>
 			<div class="slide">
-				<div class="next_room">
-					<a href="../cave/cave.html"><button class="button">next room</button></a>
+				<div id="ab4_medium_square_frame"></div>
+				<div id="ab4_medium_rectangle_frame_1"></div>
+				<div id="ab4_storage_cupboard"></div>
+				<div id="ab4_medium_rectangle_frame_2"></div>
+			</div>
+			<div class="slide">
+				<div id="ab5_medium_square_frame"></div>
+				<div id="ab5_button_elements">
+					<div id="ab5_reverse_big_star"></div>
+					<div id="ab5_back_to_top" onclick="scrollToFront(event)"></div>
+					<div id="ab5_next_room">
+						<a href="/reflections/reflection1.html" id="next"></a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript" src="tapestry.js"></script>
 </body>
 </html>
