Add smoothscroll polyfill for IE and Safari

--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <title>Gallery Hang Room</title>
     <link rel="stylesheet" type="text/css" href="gallery_hang_style.css">
+    <script type="text/javascript" src="/shared/smoothscroll.min.js"></script>
 </head>
 <body id="hang-room-body">
     <link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
