Make hang room artworks clickable

--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -37,7 +37,8 @@
 
             <div class="artwork-container"
                  style="left: 90px; top: 30px;
-                        width: 351px; height: 413px;">
+                        width: 351px; height: 413px;"
+                        onclick="onArtworkClicked(event)">
                 <img class="artwork" style="margin: 75px 60px;
                         width: 250px; height: 300px;"
                      src="http://placekitten.com/g/250/300">
@@ -47,7 +48,8 @@
 
             <div class="artwork-container"
                  style="left: 500px; top: 50px;
-                        width: 319px; height: 406px;">
+                        width: 319px; height: 406px;"
+                 onclick="onArtworkClicked(event)">
                 <img class="artwork" style="margin: 60px 70px;
                         width: 185px; height: 320px;"
                      src="http://placekitten.com/g/185/320">
@@ -57,6 +59,8 @@
 
 
         </div>
+
+        <div id="hang-room-sky-overlay" class="background-wash"></div>
     </div>
 
     <div id="hang-room-staircase">
