--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>About The Gallery | Imaginary Gallery</title>
+	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 	<link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
