--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <title>Room of Reflection | Imaginary Gallery</title>
     <link rel="stylesheet" type="text/css" href="reflection_style1.css">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
     <link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
