--- a/bla.html
+++ b/bla.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 	<link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
