--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width" initial-scale="1.0">
 	<title>Welcome to the Imaginary Gallery</title>
 	<link rel="stylesheet" type="text/css" href="styles/index_style.css">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 	<div id="background">
