Drop new font in on menu

--- a/bla.html
+++ b/bla.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" type="text/css" href="/styles/common.css">
 </head>
 <body>
 	<link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
