--- a/cave/cave.html
+++ b/cave/cave.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <title>Cave | Imaginary Gallery</title>
+    <link rel="stylesheet" type="text/css" href="/styles/common.css">
     <link rel="stylesheet" type="text/css" href="cave_style.css">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
