--- a/take_the_tour.html
+++ b/take_the_tour.html
@@ -6,6 +6,7 @@
 	<title>Take The Tour | Imaginary Gallery</title>
 	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" type="text/css" href="/styles/common.css">
 </head>
 <body>
 	<link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
