--- a/tapestry/tapestry_room.html
+++ b/tapestry/tapestry_room.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width" initial-scale="1.0">
 	<title>Tapestry Room | Imaginary Gallery</title>
+    <link rel="stylesheet" type="text/css" href="/styles/common.css">
 	<link rel="stylesheet" type="text/css" href="tapestry_style.css">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
