--- a/take_the_tour.html
+++ b/take_the_tour.html
@@ -18,10 +18,10 @@
 		</button>
 		<div class="menu-content">
 			<ul class="menu-list">
-				<li><a href="/cave.html">Explore</a></li>
-				<li><a href="/map.html">Map</a></li>
-				<li><a href="#">What's on</a></li>
-				<li><a href="/about.html">About</a></li>
+				<li><a href="/cave.html" class="ig-link">Explore</a></li>
+				<li><a href="/map.html" class="ig-link">Map</a></li>
+				<li><a href="#" class="ig-link">What's on</a></li>
+				<li><a href="/about.html" class="ig-link">About</a></li>
 			</ul>	
 		</div>
 	</div>
