Refactor homepage styles

--- a/index.html
+++ b/index.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width" initial-scale="1.0">
 	<title>Welcome to the Imaginary Gallery</title>
-	<link rel="stylesheet" type="text/css" href="styles/index_style.css">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+	<link rel="stylesheet" type="text/css" href="styles/common.css">
+	<link rel="stylesheet" type="text/css" href="styles/homepage.css">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 </head>
-<body>
-	<div id="background">
-		<div id="content">
-			<div class="nav">
-				<div class="container">
-					<a href="tapestry/tapestry_room.html"><button class="button">explore</button></a>
-				</div>
-				<div class="container">
-					<a href="map.html"><button class="button">map </button></a>
-				</div>
-				<div class="container">
-					<a href="take_the_tour.html"><button class="button">take<br>the tour</button></a>
-				</div>
-				<div class="container">
-					<a href="about.html"><button class="button">about</button></a>
-				</div>
 
-			</div>
+<body>
+	<div class="homepage-background">
+		<div class="homepage-fountain"></div>
+		<div class="homepage-nav">
+			<a href="tapestry/tapestry_room.html" class="homepage-button">Explore</a>
+			<a href="map.html" class="homepage-button">Map</a>
+			<a href="take_the_tour.html" class="homepage-button">Take<br/> the tour</a>
+			<a href="about.html" class="homepage-button">About</a>
 		</div>
 	</div>
 
 </body>
-<img src="styles/graphics/index_plain_background.png" />
+
 </html>
