--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="homepage-background">
 		<div class="homepage-nav">
-			<a href="tapestry/tapestry_room.html" class="homepage-button">Explore</a>
+			<a href="tapestry" class="homepage-button">Explore</a>
 			<a href="map.html" class="homepage-button">Map</a>
 			<a href="take_the_tour.html" class="homepage-button">Take<br/> the tour</a>
 			<a href="about.html" class="homepage-button">About</a>
