Move about, map into their own folders

--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -22,10 +22,10 @@
         </button>
         <div class="menu-content">
             <ul class="menu-list">
-                <li><a href="/cave" class="ig-link">Explore</a></li>
-                <li><a href="/map.html" class="ig-link">Map</a></li>
-                <li><a href="#" class="ig-link">What's on</a></li>
-                <li><a href="/about.html" class="ig-link">About</a></li>
+				<li><a href="/cave" class="ig-link">Explore</a></li>
+				<li><a href="/map" class="ig-link">Map</a></li>
+				<li><a href="/whats-on" class="ig-link">What's on</a></li>
+				<li><a href="/about" class="ig-link">About</a></li>
             </ul>
         </div>
     </div>
