--- a/whats-on/index.html
+++ b/whats-on/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About The Gallery | Imaginary Gallery</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width" initial-scale="1.0">
+	<title>What's on | Imaginary Gallery</title>
 	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="/styles/common.css">
@@ -17,16 +19,14 @@
 		<div class="menu-content">
 			<ul class="menu-list">
 				<li><a href="/cave" class="ig-link">Explore</a></li>
-				<li><a href="/map.html" class="ig-link">Map</a></li>
-				<li><a href="#" class="ig-link">What's on</a></li>
-				<li><a href="/about.html" class="ig-link">About</a></li>
+				<li><a href="/map" class="ig-link">Map</a></li>
+				<li><a href="/whats-on" class="ig-link">What's on</a></li>
+				<li><a href="/about" class="ig-link">About</a></li>
 			</ul>	
 		</div>
 	</div>
 	<script type="text/javascript" src="/shared/menu/menu.js"></script>
 
-<h1>
-	lots of useful info
-</h1>
+  <h1>What's on</h1>
 </body>
 </html>
