"Explore" links to the cave room

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="homepage-background">
 		<div class="homepage-nav">
-			<a href="/tapestry" class="homepage-button">Explore</a>
+			<a href="/cave" class="homepage-button">Explore</a>
 			<a href="/map" class="homepage-button">Map</a>
 			<a href="/whats-on" class="homepage-button">What's on</a>
 			<a href="/about" class="homepage-button">About</a>
