Add next and previous room arrows for Cave

--- a/cave/index.html
+++ b/cave/index.html
@@ -28,6 +28,16 @@
 	</div>
 	<script type="text/javascript" src="/shared/menu/menu.js"></script>
 
+    <a href="/" class="ig-link ig-room-link ig-previous-room">
+        <img src="/graphics/arrows/arrowgreen.png" alt="This way" class="ig-room-arrow">
+        Back to entrance
+    </a>
+
+    <a href="/reflections/reflection1.html" class="ig-link ig-room-link ig-next-room" id="next-room-link">
+        Next room
+        <img src="/graphics/arrows/arrowgreen.png" alt="This way" class="ig-room-arrow">
+    </a>
+
     <div id="overlay">
         <div class="item one">
             <button id="buttonOne"></button>
@@ -103,5 +113,6 @@
     </div>
 
     <script type="text/javascript" src="cave.js"></script>
+
 </body>
 </html>
