Add prev/next room links to reflection room

--- a/reflections/reflection4.html
+++ b/reflections/reflection4.html
@@ -41,7 +41,11 @@
         </div>
         <div class="container four">
             <div class="frame" id="frame4"></div>
-            <a href="/gallery-hang/index.html" id="next">next room</a>
+            <a href="/tapestry" class="ig-link ig-room-link ig-next-room" id="next-room-link">
+                Next room
+                <img src="/graphics/arrows/arrowgreen.png" alt="This way" class="ig-room-arrow">
+            </a>
         </div>
+
     </div>
 </body>
