--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -29,6 +29,12 @@
 	<script type="text/javascript" src="/shared/menu/menu.js"></script>
 
     <div id="content">
+
+        <a href="/cave" class="ig-link ig-room-link ig-previous-room">
+            <img src="/graphics/arrows/arrowgreen.png" alt="This way" class="ig-room-arrow">
+            Previous room
+        </a>
+
         <div class="container one">
             <div class="frame" id="frame1"></div>
         </div>
