Add links to tapestry page

--- a/reflections/reflection4.html
+++ b/reflections/reflection4.html
@@ -41,7 +41,7 @@
         </div>
         <div class="container four">
             <div class="frame" id="frame4"></div>
-            <a href="/tapestry" class="ig-link ig-room-link ig-next-room" id="next-room-link">
+            <a href="/tapestry" class="ig-link ig-room-link ig-next-room">
                 Next room
                 <img src="/graphics/arrows/arrowgreen.png" alt="This way" class="ig-room-arrow">
             </a>
