--- a/tapestry/index.html
+++ b/tapestry/index.html
@@ -31,6 +31,10 @@
 	<div id="outer-wrapper">
 		<div id="wrapper">
 			<div class="slide">
+				<a href="/reflections/reflection4.html" class="ig-link ig-room-link ig-previous-room">
+					<img src="/graphics/arrows/arrowdark.png" alt="This way" class="ig-room-arrow">
+					Previous room
+				</a>
 				<div id="ab1_entrance"></div>
 				<div id="ab1_medium_frame"></div>
 			</div>
@@ -57,7 +61,10 @@
 					<div id="ab5_reverse_big_star"></div>
 					<div id="ab5_back_to_top" onclick="scrollToFront(event)"></div>
 					<div id="ab5_next_room">
-						<a href="/reflections/reflection1.html" id="next"></a>
+						<a href="/gallery-hang" class="ig-link ig-room-link ig-next-room">
+							Next room
+							<img src="/graphics/arrows/arrowdark.png" alt="This way" class="ig-room-arrow">
+						</a>
 					</div>
 				</div>
 			</div>
