Add prev/next room links to gallery hang

--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -76,6 +76,15 @@
             <button class="look-up-button" onclick="scrollToSky(event)">Look up</button>
         </div>
 
+        <a href="/tapestry" class="ig-link ig-room-link ig-previous-room ig-dark-link">
+            <img src="/graphics/arrows/arrowdark.png" alt="This way" class="ig-room-arrow">
+            Previous room
+        </a>
+
+        <a href="/" class="ig-link ig-room-link ig-next-room ig-dark-link">
+            Back to entrance
+            <img src="/graphics/arrows/arrowdark.png" alt="This way" class="ig-room-arrow">
+        </a>
     </div>
 
     <div id="loading-panel">Loading...</div>
