--- a/tapestry/index.html
+++ b/tapestry/index.html
@@ -31,7 +31,7 @@
 	<div id="outer-wrapper">
 		<div id="wrapper">
 			<div class="slide">
-				<a href="/reflections/reflection4.html" class="ig-link ig-room-link ig-previous-room">
+				<a href="/reflections/reflection4.html" class="ig-link ig-room-link ig-previous-room ig-dark-link">
 					<img src="/graphics/arrows/arrowdark.png" alt="This way" class="ig-room-arrow">
 					Previous room
 				</a>
@@ -61,7 +61,7 @@
 					<div id="ab5_reverse_big_star"></div>
 					<div id="ab5_back_to_top" onclick="scrollToFront(event)"></div>
 					<div id="ab5_next_room">
-						<a href="/gallery-hang" class="ig-link ig-room-link ig-next-room">
+						<a href="/gallery-hang" class="ig-link ig-room-link ig-next-room ig-dark-link">
 							Next room
 							<img src="/graphics/arrows/arrowdark.png" alt="This way" class="ig-room-arrow">
 						</a>
