Skeleton about page

--- a/about/index.html
+++ b/about/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>About The Gallery | Imaginary Gallery</title>
-	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" type="text/css" href="/styles/common.css">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+	<link rel="stylesheet" type="text/css" href="/styles/common.css">
+	<link rel="stylesheet" type="text/css" href="about-style.css">
 </head>
+
 <body>
 	<link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
 	<div id="menu" class="closed">
@@ -20,13 +23,35 @@
 				<li><a href="/map" class="ig-link">Map</a></li>
 				<li><a href="/whats-on" class="ig-link">What's on</a></li>
 				<li><a href="/about" class="ig-link">About</a></li>
-			</ul>	
+			</ul>
 		</div>
 	</div>
 	<script type="text/javascript" src="/shared/menu/menu.js"></script>
 
-<h1>
-	lots of useful info
-</h1>
+	<div class="container">
+
+		<h1>About</h1>
+		<p>The Imaginary Gallery was dreamt up somewhere between Glasgow and London.</p>
+
+		<p>We want to challenge the way we consume art, both in galleries and across social media.</p>
+
+		<p>We want to see art shared in an inclusive way, where every visitor feels they can take up space and have a
+			dialogue with the work. We want people to feel welcomed, not manipulated by algorithms, and able to think
+			outside of social barriers in the physical world.</p>
+
+		<p>We believe in the power of art to foster empathy and bring us joy, all in a safe space away from the hectic
+			everyday.</p>
+
+		<p>We hope you enjoy your visit to the gallery. We are organising an open call and can't wait to have an
+			exciting range of works to show you. For more information about the open call, please <a href="/whats-on"
+				class="ig-link">click here</a>. For now,
+			please feel free to explore the gallery - the space is yours!</p>
+
+		<a href="/gallery-hang" class="ig-link ig-room-link ig-next-room ig-alt-link">
+			Visit the gallery
+			<img src="/graphics/arrows/arrowblue.png" alt="This way" class="ig-room-arrow">
+		</a>
+	</div>
 </body>
+
 </html>
