--- a/whats-on/index.html
+++ b/whats-on/index.html
@@ -28,5 +28,6 @@
 	<script type="text/javascript" src="/shared/menu/menu.js"></script>
 
   <h1>What's on</h1>
+  <p>Showcase coming soon</p>
 </body>
 </html>
