Template map room

--- a/map/index.html
+++ b/map/index.html
@@ -7,6 +7,7 @@
 	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="/styles/common.css">
+    <link rel="stylesheet" type="text/css" href="map-style.css">
 </head>
 <body>
 	<link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
@@ -27,8 +28,11 @@
 	</div>
 	<script type="text/javascript" src="/shared/menu/menu.js"></script>
 
-<h1>
-	Don't get lost!
-</h1>
+	<div class="container">
+		<h1>Map</h1>
+	</div>
+	<div class="map-container">
+		<img src="29-12-21-map.png" id="map-background" alt="A fantastic building with strangely shaped rooms">
+	</div>
 </body>
 </html>
