--- a/whats-on/index.html
+++ b/whats-on/index.html
@@ -27,7 +27,9 @@
 	</div>
 	<script type="text/javascript" src="/shared/menu/menu.js"></script>
 
-  <h1>What's on</h1>
-  <p>Showcase coming soon</p>
+	<div class="container">
+		<h1>What's on</h1>
+		<p>Showcase coming soon</p>
+	</div>
 </body>
 </html>
